Closed Bug 328655 Opened 19 years ago Closed 19 years ago

Bidi: Pressing "Home" or "End" on a blank line in a textarea in a bidi page moves the caret to the top of the textarea

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: uriber, Assigned: uriber)

References

Details

(Keywords: regression)

Attachments

(1 file)

In any textarea (RTL or LTR), in a page containing RTL text (e.g., any of the textareas in attachment 128680 [details]): 1. Place the caret in an empty line 2. Press "Home" or "End" (Command+left/right-arrow on Mac). Result: the caret jumps to the very top of the textarea. Expected: the caret shouldn't move. This is a regression from bug 313602.
Attached patch patchSplinter Review
This restores the condition removed in bug 313602, but only for the Home/End case, thereby fixing this bug without regressing bug 313602 or bug 313596.
Attachment #213258 - Flags: review?(smontagu)
Status: NEW → ASSIGNED
Attachment #213258 - Flags: review?(smontagu) → review+
Attachment #213258 - Flags: superreview?(roc)
Attachment #213258 - Flags: superreview?(roc) → superreview+
Checked in. Also s/cursor/caret/ in the comment. Checking in layout/generic/nsSelection.cpp; /cvsroot/mozilla/layout/generic/nsSelection.cpp,v <-- nsSelection.cpp new revision: 3.216; previous revision: 3.215 done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: zach → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: