Bug 328655: Pressing "Home" or "End" on a blank line in a textarea in a bidi page moves the caret to the top of the textarea.  r=smontagu sr=roc